--- a/preentrega1-escalante/src/style.css
+++ b/preentrega1-escalante/src/style.css
@@ -24,7 +24,7 @@ header .containerBrand img{
     transform: scale(0.6);
 }
 
-header .containerItemList{
+header .categorias{
     width: 70%;
     height: 100%;
     display: flex;
@@ -33,7 +33,7 @@ header .containerItemList{
 
 }
 
-header .containerItemList ul{
+header .categorias ul{
     list-style: none;
     display: flex;
     margin: 0;
@@ -41,9 +41,14 @@ header .containerItemList ul{
 
 }
 
-header .containerItemList ul li{
+header .categorias ul li{
     margin: 10px;
     cursor: pointer;
+}
+
+header .categorias ul li a{
+    text-decoration: none;
+    color: black;
 }
 
 
