--- a/src/containerCardsItems.css
+++ b/src/containerCardsItems.css
@@ -1,6 +1,12 @@
-.containerCardsItems{
+.containerCardItems{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 10px;
+    padding: 80px 10px;
+}
+
+.containerCardItems .containerSpinner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
